--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -230,6 +230,8 @@
                 width: 150px
             .col-datalevel
                 width: 90px
+            td:last-child i
+                color: $isb-success
 
 .parsets-tooltip
     background-color: rgba($tooltip-color, 0.8)
