--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -42,10 +42,6 @@
             <div class="panel-body">
                 <table class="user-info" role="presentation">
                     <tr>
-                        <td>User ID</td>
-                        <td>{{ user_details.id }}</td>
-                    </tr>
-                    <tr>
                         <td>Name</td>
                         <td>{{ user_details.first_name }} {{ user_details.last_name }}</td>
                     </tr>
@@ -53,11 +49,10 @@
                         <td>Email Address</td>
                         <td>{{ user_details.email }}</td>
                     </tr>
-
-                    <tr>
-                        <td>Last Logged In</td>
-                        <td id="last_login">{{ user_details.last_login|safe }} GMT</td>
-                    </tr>
+{#                    <tr>#}
+{#                        <td>Last Logged In</td>#}
+{#                        <td id="last_login">{{ user_details.last_login|safe }} GMT</td>#}
+{#                    </tr>#}
                 </table>
             </div>
         </div>
