--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -42,6 +42,9 @@
     {% endif %}
     <script type="text/javascript"> 
             var NIH_assertion_expiration_client_time = new Date("{{ user_details.NIH_assertion_expiration|safe }}");
-            document.getElementById('NIH_expiration').innerHTML = NIH_assertion_expiration_client_time; 
+            if (NIH_assertion_expiration_client_time != 'Invalid Date') {
+                document.getElementById('NIH_expiration').innerHTML = NIH_assertion_expiration_client_time; 
+            }
+
     </script>
 {%  endblock %}
