fixed #204, in the increasingly unlikely event that the plot cannot be generated, the text has been modified and a button is presented for the user to resubmit the plot

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,13 @@ nav {
 /********************************************
  * Whole Site Widget Style
  *******************************************/
+.resubmit-button {
+  position :relative;
+  top: -405px;
+  left: 285px;
+  display:none;
+}
+
 .btn {
   text-transform: capitalize;
   overflow: hidden;
