--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -229,6 +229,7 @@
             {% endif %}
         </div>
         <div class="legend"></div>
+        <button class="resubmit-button btn btn-primary">Resubmit Plot</button>
         <div class="pairwise-result"></div>
         <div class="save-cohort-card" style="display:none;">
             <p class="selected-samples-count">Number of Samples: 0</p>
