--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -257,9 +257,9 @@
     var attr_list = {{ attr_list|tojson|safe }};
     var total_samples = {{ total_samples|safe }};
     var attr_counts = {{ attr_list_count|tojson|safe }};
+    var base_url = '{{ base_url|safe }}';
     var base_api_url = '{{ base_api_url|safe }}';
     var cohort_id = undefined;
-    var api_token = {{ token|tojson|safe }};
     </script>
 {% endblock %}
 
