--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -404,7 +404,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="applyFiltersModal">Apply New Filters</h4>
+                    <h4 class="modal-title" id="applyFiltersModal">Save Changes</h4>
                 </div>
                 <form id="apply-filters-form" method="POST" action="{% url 'save_cohort' %}">
                     <div class="modal-body">
@@ -414,7 +414,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <input type="submit" value="Apply Filters" class="btn btn-primary" />
+                        <input type="submit" value="Save Changes" class="btn btn-primary" />
                         <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
