--- a/templates/variables/variables_select.html
+++ b/templates/variables/variables_select.html
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="panel penel-default">
         <div class="panel-body">
-            <div class="page-action-group">
+            <div class="page-action-group" role="menubar">
                 <li role="menuitem">
                     {% if workbook %}
                         <button id="addToAnalysis" class="btn btn-default">Apply to Analysis</button>
