--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -4,7 +4,7 @@
 {% load project_custom_tags %}
 {% load workbook_custom_tags %}
 
-<header class="navbar navbar-fixed-top site-header" role="header">
+<header class="navbar navbar-fixed-top site-header" role="menubar">
     <nav class="container">
         <div class="row">
             <div class="col-lg-12">
