--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -19,10 +19,10 @@
     </ol>
     <h1 class="page-header">{{ workbook.name }}</h1>
     <p>{{ workbook.description }}</p>
-    <ul class="page-action-group">
+    <ul class="page-action-group" role="menubar">
         {% if workbook.owner.id == request.user.id %}
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-workbook-details-modal-{{ workbook.id }}">Edit Details</button></li>
-        <li role="menuiem"><button class="btn btn-info" data-toggle="modal" data-target="#copy-workbook-modal-{{ workbook.id }}">Duplicate</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#copy-workbook-modal-{{ workbook.id }}">Duplicate</button></li>
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#delete-workbook-modal-{{ workbook.id }}">Delete</button></li>
         {% if is_shareable %}
         <li class="separator"></li>
