--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Workbook Details</h4>
+                <h4 class="modal-title" id="edit-workbook-header">Workbook Details</h4>
             </div>
             <form id="edit-workbook-{{ workbook.id }}" method="POST" action="{% url 'workbook_edit' workbook.id %}">
                 {% csrf_token %}
@@ -26,14 +26,14 @@
 </div>
 
 <!-- Delete Workbook Modal -->
-<div class="modal fade" id="delete-workbook-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-workbook-header" aria-hidden="true">
+<div class="modal fade" id="delete-workbook-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="delete-workbook-body" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title"></h4>
             </div>
-            <div class="modal-body">Delete this Workbook?</div>
+            <div class="modal-body" id="delete-workbook-body">Delete this Workbook?</div>
             <form id="delete-workbook-{{ workbook.id }}" method="POST" action="{% url 'workbook_delete' workbook.id %}">
                 {% csrf_token %}
                 <div class="modal-footer">
@@ -77,14 +77,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title"></h4>
+                <h4 class="modal-title" id="copy-workbook-header">Duplicate this Workbook?</h4>
             </div>
             <div class="modal-body">
                 <p>
                     This will create a copy of the worksheet and reference the cohorts and projects used in the workbook
                     This will not make duplicates of the cohort and projects used in the workbook
                 </p>
-                Duplicate this Workbook?
             </div>
             <form id="copy-workbook-{{ workbook.id }}" method="POST" action="{% url 'workbook_copy' workbook.id %}">
                 {% csrf_token %}
@@ -104,7 +103,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Remove Yourself from this Workbook?</h4>
+                <h4 class="modal-title" id="remove-workbook-header">Remove Yourself from this Workbook?</h4>
             </div>
             <form id="remove-workbook-{{ workbook.id }}" method="POST" action="{% url 'sharing_remove' shared.id %}" data-redirect="{% url 'workbooks' %}">
                 {% csrf_token %}
@@ -125,7 +124,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <!--<h4 class="modal-title">Workbook Sharing</h4>-->
+                <!-- If we want to remove this header we must place this ID on another element with text which can describe the dialog to a screen reader -->
+                <h4 class="modal-title" id="share-workbook-header">Workbook Sharing</h4>
                 <ul class="nav nav-tabs" data-tabs="tablist">
                     {% if workbook.owner == request.user %}
                         <li class="active"><a href="#share-{{ workbook.id }}" data-toggle="tab">Share</a></li>
