--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -72,7 +72,7 @@
                     </p>
                 </div>
             </div>
-
+        </div>
 
         <div class="col-sm-10 col-sm-offset-1">
             <h2>About Us:</h2>
