--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -14,6 +14,7 @@ $base-dark: #000
 
 // Brand color
 $isb-primary: #2A537A
+$isb-lighter: #4CC2D6
 $isb-info:    #2B7388
 $isb-success: #C9DD03
 $isb-warning: #F7991B
