-> Added a spinner to the parallel coordinates plot -> Fixed a bug in search_helpers which was causing check_changes() to be called too often.

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -279,6 +279,7 @@
                 <h4>Public Data Availability</h4>
             </div>
             <div class="panel-body">
+                <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                 <div id="multi-categorical"></div>
             </div>
         </div>
