--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -116,13 +116,31 @@
                 z-index: 20
 
     .parallel-sets
-        margin-top: 30px
+        .panel-body
+            position: relative
+            margin-top: 30px
+            overflow: hidden
+            min-height: 210px
+        .spinner
+            position: absolute
+            width: 100%
+            height: 100%
+            left: 0px
+            background: rgba(0,0,0,.5)
+            z-index: 10
+            i
+                position: absolute
+                left: 45%
+                top: 40%
+                margin: auto
+                font-size: 100px
 
     #create-cohort-form .form-control-static span
         display: inline-block
 
     #multi-categorical
-        overflow-x: scroll
+        overflow-x: hidden
+        min-height: 100px
         svg
             display: block
 
