--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -212,6 +212,7 @@
                 <h4 class="panel-title">Public Data Availability</h4>
             </div>
             <div class="panel-body">
+                <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                 <div id="multi-categorical"></div>
             </div>
         </div>
