--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -81,6 +81,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- The Sample Type tooltip relies on this template's structure, see visualizations/createTreeGraph.js -->
     <div id="filter-panel" class="col-lg-4 col-md-4" style="display:none;">
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs" role="tablist">
