-> Added a minimized 'Details' panel to the new_cohort template which shows sample and (eventually) participant count. This is filled in via Js since it's the Js that gets this information (via an endpoint).
-> Adjusted the cohort_details template so it will now adjust the total number of participants and samples as the cohort is edited.

-> Minor CSS additions to make this display in specific ways

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -214,6 +214,15 @@
             fill: #2196F3
             stroke: #2196F3
 
+.inline-detail
+    float: left
+    width: 40%
+    span
+        font-weight: 700
+
+.inline-detail:last-child
+        padding-right: 0px
+
 #cohort-filelist
     padding-top: 15px
     margin-top: 115px
