--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -195,6 +195,16 @@
             </div>
         </div>
 
+        <div class="cohort-info panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">Details</h4>
+            </div>
+            <div class="panel-body">
+                <div class="inline-detail">Total Number of Samples: <span id="total-samples">N/A</span></div>
+                <div class="inline-detail">Total Number of Participants: <span id="total-participants">N/A</span></div>
+            </div>
+        </div>
+
         <div class="clinical-trees panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">Clinical Features</h4>
