-> A small spinner will display while the values are being queried from the server -> TBD will display if no value is currently available but we're not in an error state -> Error will display if there was an error on the request

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -135,6 +135,34 @@
                 margin: auto
                 font-size: 100px
 
+    .cohort-info
+        .detail-label
+            float: left
+        .total-values
+            margin-left: 10px
+        .spinner
+            width: 50px
+            margin-left: 10px
+            float: left
+        .panel-body
+            >div
+                clear: left
+                width: 100%
+                margin: 5px 0px 5px 0px
+            >div.inline-detail
+                float: left
+                width: 40%
+                clear: none
+            span.total-values
+                font-weight: 700
+        .single-line
+            height: 1.5em
+        ul
+            padding: 5px 0px 0px 20px
+
+        .inline-detail:last-child
+                padding-right: 0px
+
     #create-cohort-form .form-control-static span
         display: inline-block
 
@@ -213,15 +241,6 @@
         .category-0
             fill: #2196F3
             stroke: #2196F3
-
-.inline-detail
-    float: left
-    width: 40%
-    span
-        font-weight: 700
-
-.inline-detail:last-child
-        padding-right: 0px
 
 #cohort-filelist
     padding-top: 15px
