-> Changed to bootstrap grid classes for main div layout under details

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -145,18 +145,8 @@
             margin-left: 10px
             float: left
         .panel-body
-            >div
-                clear: left
-                width: 100%
-                margin: 5px 0px 5px 0px
-            >div.inline-detail
-                float: left
-                width: 40%
-                clear: none
             span.total-values
                 font-weight: 700
-        .single-line
-            height: 1.5em
         ul
             padding: 5px 0px 0px 20px
 
@@ -241,6 +231,9 @@
         .category-0
             fill: #2196F3
             stroke: #2196F3
+
+.row-spacer-v
+    margin-bottom: 7px
 
 #cohort-filelist
     padding-top: 15px
