--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -200,12 +200,12 @@
                 <h4 class="panel-title">Details</h4>
             </div>
             <div class="panel-body">
-                <div class="inline-detail">
+                <div class="row col-md-6">
                     <span class="detail-label">Total Number of Samples:</span>
                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                     <span class="total-values" id="total-samples">TBD</span>
                 </div>
-                <div class="inline-detail">
+                <div class="row col-md-6">
                     <span class="detail-label">Total Number of Participants:</span>
                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                     <span class="total-values" id="total-participants">TBD</span>
